<resources>
    <string name="app_name">VieStar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Nonton</string>
    <string name="title_study">Belajar</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="notif">Notifikasi</string>
    <string name="kosa_kata_hari_ini">Kosakata Hari Ini</string>
    <string name="klik_arti_tepat">Klik arti yang tepat</string>
    <string name="makan">Makan</string>
    <string name="minum">Minum</string>
    <string name="eat">Eat</string>
    <string name="tab_text_1">Local</string>
    <string name="tab_text_2">Streaming</string>
    <string name="judul_film">Fast and Furious 10</string>
    <string name="deskripsi_film">Selama banyak misi dan melawan rintangan yang mustahil, Dom Toretto dan keluarganya telah mengakali dan mengalahkan setiap musuh di jalan mereka</string>
    <string name="save_word">Save Words</string>
    <string name="word">Word</string>
    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="searchbar_hint_nonton">Cari film...</string>
    <string name="searchbar_hint_kata">Cari kosakata...</string>
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="back_btn">Back Button</string>
    <string name="pilih_subtitle">Srt</string>
    <string name="title_dialog">Information</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Ok</string>
    <string name="supporting_text">Anda memilih kata : </string>
    <string name="knife">Knife</string>
    <string name="title_login_page">Login</string>
    <string name="message_login_page">Please login first </string>
    <string name="email">Email</string>
    <string name="empty_email">Please insert your email</string>
    <string name="invalid_email">The email is invalid</string>
    <string name="empty_password">Please insert your password</string>
    <string name="password_must_more8">Password must more than 8 character</string>
    <string name="dont_have_account">Don\'t have account ?</string>
    <string name="action_register">Register here</string>
    <string name="login">Sign In</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Register</string>
    <string name="name">Name</string>
    <string name="have_account">Already have account ?</string>
    <string name="action_login">Login here</string>
    <string name="signup">Sign Up</string>

    <string-array name="data_name">
        <item>Fast and Furious 9</item>
        <item>Evil Dead Rise</item>
        <item>Home For Rent</item>
    </string-array>
    <string-array name="data_description">
        <item>Selama banyak misi dan melawan rintangan yang mustahil, Dom Toretto dan keluarganya telah mengakali dan mengalahkan setiap musuh di jalan mereka. Sekarang, mereka menghadapi lawan paling mematikan yang pernah mereka hadapi. </item>
        <item>Evil Dead Rise bercerita tentang sepasang kakak adik yang berusaha menyelamatkan diri dan keluarganya dari makhluk jahat yang menghantui rumahnya. Makhluk jahat ini muncul saat keduanya menemukan ‘kitab orang mati’. Kitab inilah yang memanggil roh-roh tersebut untuk datang.</item>
        <item>Ini adalah film horor Thailand yang telah tayang pada 6 April 2023 lalu di negara asalnya. Film ini diketahui akan masuk Indonesia pada Mei 2023 mendatang. Home For Rent bercerita tentang sepasang suami istri yang memutuskan untuk menyewakan rumahnya dan pindah ke apartemen. Tetapi, setelah menyewakan rumah, perilaku sang suami mulai berubah dan sering menghilang di malam hari.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/fast10</item>
        <item>@drawable/evildeadrise</item>
        <item>@drawable/homeforrent</item>
    </integer-array>
    <string-array name="data_word">
        <item>home</item>
        <item>easy</item>
        <item>honeymoon</item>
        <item>keeping</item>
        <item>fucking</item>
        <item>today</item>
        <item>good</item>
        <item>probably</item>
        <item>point</item>
        <item>ready</item>
        <item>please</item>
        <item>boys</item>
    </string-array>
</resources>